# amos-autonomous_mission_orchestration_system

./: .env.example  .gitignore  AMOS_Manifest.md  AMOS_Next.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE.md  LICENSE  MANIFESTO.md  MOS_PROJECT_MANIFEST.md  README.md  SECURITY.md  TRADEMARK.md  _ StartStop.rtf  build_ew_sim.sh  build_phase9_ew.sh  connect_px4_sitl.sh  deploy_field.sh  docker-compose.yaml  docker-compose.yml  docker_entrypoint.sh  fix_ew_routes.sh  launch_mos.sh  patch_nav.sh  requirements.txt  run_demo.sh  shutdown_mos.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
config/: drone_reference.json  locations.json  platoon_config.tampa_bay.bak  platoon_config.yaml
core/: adapter_base.py  data_model.py  event_bus.py  geo_import.py  geo_utils.py  key_manager.py  plugin_base.py  plugin_loader.py  plugin_registry.py  schema_validator.py  security_audit.py
db/: connection.py  persistence.py  schema.sql  seed.py  setup.sh
docs/: AMOS_Introduction.md  API_REFERENCE.md  INTEGRATION_GUIDE.md
enterprise/: install.py  uninstall.py
integrations/: __init__.py  adsb_receiver.py  ais_receiver.py  aprs_bridge.py  ardupilot_bridge.py  cot_receiver.py  (+22 more)
src/mos_ew/: package.xml  setup.py
src/mos_ew/config/: ew_config.yaml
src/mos_ew/mos_ew/: cyber_ops.py  ew_manager.py  rf_analyzer.py  sdr_bridge.py  sigint_collector.py
src/mos_interfaces/: CMakeLists.txt  package.xml
src/mos_interfaces/msg/: AssetState.msg  MissionIntent.msg  TaskOrder.msg  ThreatAssessment.msg  ThreatContact.msg
src/mos_interfaces/srv/: AllocateTask.srv
(+315 files in other folders)
