<?xml version="1.0"?>
<package format="3">
  <name>mos_ew</name><version>9.0.0</version>
  <description>MOS Electronic Warfare / SIGINT / Cyber Suite</description>
  <maintainer email="ew@mavrix.dev">Mavrix Dynamics</maintainer>
  <license>Proprietary</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export><build_type>ament_python</build_type></export>
</package>
